chore: Update logo loading attribute in header and footer layouts

--- a/src/layouts/footer.html
+++ b/src/layouts/footer.html
@@ -1,4 +1,4 @@
-<img loading="lazy" src="../../public/icons/logo.svg" />
+<img src="../../public/icons/logo.svg" />
 <div class="column">
 	<a href="#">Become an Artist</a>
 	<a href="#">Sell Artworks</a>
