--- a/src/layouts/head.html
+++ b/src/layouts/head.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" href="../css/style.css" />
 <link rel="stylesheet" href="../css/about.css" />
 <link rel="stylesheet" href="../css/explore.css" />
-<script src="../js/script.js" defer></script>
+
 <script>
-	$(function () {
-		$(".header").load("../layouts/header.html");
-		$(".footer").load("../layouts/footer.html");
-	});
+	$('.header').load('../layouts/header.html')
+	$('.footer').load('../layouts/footer.html')
 </script>
+
+<script src="../js/script.js" defer></script>
