--- a/src/layouts/header.html
+++ b/src/layouts/header.html
@@ -1,9 +1,5 @@
 <a href="../pages/index.html" class="logo"
-	><img
-		loading="lazy"
-		src="../../public/icons/logo.svg"
-		alt="logo"
-		class="logo-img"
+	><img src="../../public/icons/logo.svg" alt="logo" class="logo-img"
 /></a>
 <div class="menu-desktop">
 	<nav class="menu-desktop-nav">
@@ -11,51 +7,27 @@
 		<a href="../pages/explore.html">Explore Art</a>
 		<a href="../pages/about.html">About Us</a>
 	</nav>
-	<div class="icon-menu-mobile">
-		<img
-			loading="lazy"
-			class="icon icon-menu"
-			src="../../public/icons/menu-mobile.svg"
-			alt="menu"
-		/>
-	</div>
+</div>
+
+<div class="icon-menu-mobile">
+	<img class="icon icon-menu" src="../../public/icons/menu-mobile.svg" alt="menu" />
 </div>
 
 <div class="menu-mobile">
 	<div class="menu-icon-close">
-		<img
-			loading="lazy"
-			class="icon icon-close"
-			src="../../public/icons/menu-mobile-close.svg"
-			alt="close"
-		/>
+		<img class="icon icon-close" src="../../public/icons/menu-mobile-close.svg" alt="close" />
 	</div>
 	<nav class="menu-mobile-nav">
 		<a href="../pages/index.html">
-			<img
-				loading="lazy"
-				class="icon-mobile"
-				src="../../public/icons/home.svg"
-				alt="Home"
-			/>
+			<img class="icon-mobile" src="../../public/icons/home.svg" alt="Home" />
 			Home
 		</a>
 		<a href="../pages/explore.html">
-			<img
-				loading="lazy"
-				class="icon-mobile"
-				src="../../public/icons/explore.svg"
-				alt="explore art"
-			/>
+			<img class="icon-mobile" src="../../public/icons/explore.svg" alt="explore art" />
 			Explore Art
 		</a>
 		<a href="../pages/about.html">
-			<img
-				loading="lazy"
-				class="icon-mobile"
-				src="../../public/icons/about-us.svg"
-				alt="about us"
-			/>
+			<img class="icon-mobile" src="../../public/icons/about-us.svg" alt="about us" />
 			About Us
 		</a>
 	</nav>
