modified:   src/css/explore.css 	modified:   src/css/style.css 	modified:   src/js/explore.js 	modified:   src/js/script.js 	modified:   src/pages/index.html

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -82,23 +82,19 @@ form button:hover {
 header {
 	z-index: 1000;
 	position: fixed;
-	top: 0;
-	left: 0;
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
 	padding: 20px 15%;
 	transition: 0.6s;
 }
 
 header a {
-	font-size: 16px;
+	font-size: 17px;
 	font-weight: 500;
 	text-decoration: none;
 	color: var(--text-color);
-	margin: 0 30px;
-	padding: 0 10px;
+	margin-left: 20px;
 	border-radius: 20px;
 }
 
@@ -107,13 +103,13 @@ header a:hover {
 }
 
 header .logo-img {
-	align-self: flex-start;
 	width: 150px;
 	height: 100%;
 	object-fit: contain;
 }
 
 header .logo {
+	margin-left: 0;
 	background: none;
 }
 
@@ -148,8 +144,14 @@ header .logo:hover {
 }
 
 @media screen and (max-width: 600px) {
-	.main-wrapper {
+	header {
 		padding: 20px 10%;
+	}
+
+	.sticky,
+	.hero,
+	.main-wrapper {
+		padding: 0 10%;
 	}
 
 	.menu-desktop-nav {
