--- a/src/css/explore.css
+++ b/src/css/explore.css
@@ -12,7 +12,7 @@
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
-	height: 80vh;
+	height: 100vh;
 }
 
 .discover-img {
@@ -29,7 +29,7 @@
 
 .tab {
 	position: relative;
-	width: 10%;
+	width: 5%;
 	padding: 20px;
 	background: #000;
 	color: #fff;
@@ -42,7 +42,7 @@
 	width: 100%;
 }
 .tab:hover ~ .tab:first-child {
-	width: 10%;
+	width: 5%;
 }
 
 .tab img {
@@ -142,7 +142,7 @@
 	color: grey;
 }
 
-.imageContainer {
+.image-container {
 	padding: 24px 15%;
 	display: grid;
 	grid-gap: 24px;
@@ -150,14 +150,14 @@
 	justify-content: center;
 }
 
-.imageContainer img {
+.image-container img {
 	width: 400px;
 	height: 500px;
 	object-fit: cover;
 	border-radius: 10px;
 }
 
-.imageContainer img:hover {
+.image-container img:hover {
 	transform: scale(1.05);
 	transition: transform 1s ease;
 }
@@ -172,12 +172,12 @@
 		box-shadow: none;
 	}
 
-	.imageContainer {
+	.image-container {
 		padding: 15px 5%;
 		grid-template-columns: repeat(1, 1fr);
 	}
 
-	.imageContainer img {
+	.image-container img {
 		width: 100%;
 		height: 100%;
 	}
